<resources>
    <string name="app_name">Polls</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>

    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="loginUp">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_title">Forgot Password</string>

    <string name="create_account">Create Account</string>
    <string name="update_account">Update Account</string>
    <string name="create_poll">Create a Poll</string>
    <string name="update_poll">Update Poll</string>
    <string name="share_poll">Share Poll</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_instagram">Instagram</string>
    <string name="share_whatsapp">Whatsapp</string>
    <string name="share_twitter">Twitter</string>
    <string name="share_facebook_message">Poll has been shared to facebook</string>
    <string name="share_instagram_message">Poll has been shared to instagram</string>
    <string name="share_whatsapp_message">Poll has been shared to whatsapp</string>
    <string name="share_twitter_message">Poll has been shared to twitter</string>
    <string name="create_poll_options">Poll Options</string>
    <string name="choose_avatar">Choose your avatar</string>
    <string name="choose_topic">Choose your topic</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="you_are_set">You are all set</string>
    <string name="please_login">Please log in to your account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="enable">Enable</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="vote">Vote</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="rate_poll">Rate Poll</string>

    <string name="select_a_category">Select at lease one category</string>
    <string name="activity_create_question_text_hint">Create a question</string>
    <string name="option1">Option 1 (Required)</string>
    <string name="option2">Option 2 (Required)</string>
    <string name="option3">Option 3 (Optional)</string>
    <string name="option4">Option 4 (Optional)</string>

    <string name="text_delete_poll_title_text">Delete Poll</string>
    <string name="text_delete_poll_message_text">Are you sure want to delete this poll?</string>
    <string name="text_delete_poll_text">DELETE POLL</string>
    <string name="text_cancel_text">CANCEL</string>
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="question_cannot_empty">Question cannot be empty</string>
    <string name="username_cannot_empty">Username or email cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="option1_cannot_empty">Option1 cannot be empty</string>
    <string name="option2_cannot_empty">Option1 cannot be empty</string>
    <string name="email_not_valid">Email must be valid</string>

    <string name="activity_main_input_search_hint">Search</string>
    <string name="activity_main_text_my_polls_text">My Polls</string>

    <string-array name="category_array">
        <item>Select a Category</item>
        <item>Fashion</item>
        <item>Finance</item>
        <item>Science</item>
        <item>Travel</item>
    </string-array>
</resources>