<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SharePollActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/lavender" />

    <TextView
        android:id="@+id/tvSharePoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/share_poll"
        android:textColor="@color/lavender"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/share_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSharePoll" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInstagram"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/share_instagram"
        app:layout_constraintEnd_toEndOf="@+id/btnFacebook"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/btnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWhatsapp"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/share_whatsapp"
        app:layout_constraintEnd_toEndOf="@+id/btnInstagram"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/btnInstagram"
        app:layout_constraintTop_toBottomOf="@+id/btnInstagram" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTwitter"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/share_twitter"
        app:layout_constraintEnd_toEndOf="@+id/btnWhatsapp"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/btnWhatsapp"
        app:layout_constraintTop_toBottomOf="@+id/btnWhatsapp" />

</androidx.constraintlayout.widget.ConstraintLayout>