<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterConfirmActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pollslogo" />

    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/congratulations"
        android:textColor="@color/lavender"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tvSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/you_are_set"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCongratulations"
        app:layout_constraintStart_toStartOf="@+id/tvCongratulations"
        app:layout_constraintTop_toBottomOf="@+id/tvCongratulations" />

    <TextView
        android:id="@+id/tvLogintoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/please_login"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCongratulations"
        app:layout_constraintStart_toStartOf="@+id/tvCongratulations"
        app:layout_constraintTop_toBottomOf="@+id/tvSet" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_marginTop="68dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/tvCongratulations"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCongratulations"
        app:layout_constraintTop_toBottomOf="@+id/tvLogintoAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>