<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreatePollActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/lavender" />

            <ImageView
                android:id="@+id/imageDelete"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_delete_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                app:tint="@color/colorDelete" />

            <TextView
                android:id="@+id/tvCreatePoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/create_poll"
                android:textColor="@color/lavender"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.424"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageBack" />

            <EditText
                android:id="@+id/inputNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/activity_create_question_text_hint"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCreatePoll"
                app:layout_constraintVertical_bias="0.015" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@+id/tvCreatePoll"
                app:layout_constraintStart_toStartOf="@+id/inputNoteText"
                app:layout_constraintTop_toBottomOf="@+id/inputNoteText"/>

            <Switch
                android:theme="@style/SwitchCompatTheme"
                android:checked = "true"
                android:id="@+id/switchEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_spinner"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                style="@style/btnStyle"
                android:layout_width="0dp"
                android:layout_marginTop="40dp"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="@+id/inputNoteText"
                app:layout_constraintHorizontal_bias="0.464"
                app:layout_constraintStart_toStartOf="@+id/inputNoteText"
                app:layout_constraintTop_toBottomOf="@+id/switchEnable" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>